--- a/sopplus/build.gradle
+++ b/sopplus/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "tv.sopplus.app"
+        applicationId "io.binstream.github.demo"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 1
